syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.proto";
option java_multiple_files = true;

message TransferFromTransactionData {
    bytes from = 1; // <Address>
    bytes to = 2; // <Address>
    bytes value = 3; // <BigInteger>
}
